spacing fix slider

--- a/assets/solidGold.css
+++ b/assets/solidGold.css
@@ -86,7 +86,7 @@ a {
   font-family: "PetcoCircularTT-Bold", arial !important;
   font-weight: 900;
   font-size: 50px;
-  line-height: 45px;
+  line-height: 50px;
   margin: 20px auto;
 }
 .citrusSolid__sliderTextBox p {
@@ -112,7 +112,7 @@ a {
     font-family: "PetcoCircularTT-Bold", arial !important;
     font-weight: 900;
     font-size: 30px;
-    line-height: 25px;
+    line-height: 30px;
     margin: 10px auto;
   }
   .citrusSolid__sliderTextBox p {
@@ -131,7 +131,7 @@ a {
     font-family: "PetcoCircularTT-Bold", arial !important;
     font-weight: 900;
     font-size: 50px;
-    line-height: 45px;
+    line-height: 50px;
     margin: 10px auto;
   }
   .citrusSolid__sliderTextBox p {
@@ -147,7 +147,7 @@ a {
     font-family: "PetcoCircularTT-Bold", arial !important;
     font-weight: 900;
     font-size: 30px;
-    line-height: 25px;
+    line-height: 30px;
     margin: 10px auto;
   }
   .citrusSolid__sliderTextBox p {
